# axia3d

./: .gitignore  20260412복원_보고서1.0.docx  ARCHITECTURE.md  AXiA 3D.axia  AXiA_3D_Development_Report_20260406.docx  AXiA_3D_개선완료_보고서.docx  AXiA_Project_2026-04-13.xia  BACKUP-INFO.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FILE_PICKER_FIX.md  GITHUB_ACTIONS_SETUP.md  IMPORT_FORMATS_SUMMARY.md  IMPORT_MENU_GUIDE.md  LICENSE  PHASE1_IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  SEAMLESS_OFFSET_SUMMARY.md  SKP_IMPLEMENTATION_COMPLETE.md  SKP_TEST_REPORT.md  TEST_INSTRUCTIONS.md  TEST_REPORT_2026_04_12.md  TOOL_REFACTORING.md  errors.txt  errors1.txt  package-lock.json  package.json  setup-github.ps1  simple_test.dxf  test_model.skp  zi1dWsHt  zipGAbk4
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: build.yml  ci.yml  deploy.yml  ifc.yml  mcp.yml  release.yml  update-visual-baselines.yml
axia-3d-deploy-20260412-203817/: DEPLOYMENT-README.md  index.html
axia-3d-deploy-20260412-203817/assets/: MaterialLibrary-Dgd2NuIo.js  index-B-SZNBgs.js
crates/axia-core/: Cargo.toml
crates/axia-core/src/: boolean_group.rs  commands.rs  constraint.rs  group.rs  import_dxf.rs  lib.rs  lifecycle.rs  material.rs  orphan_recovery.rs  promote.rs  reference.rs  scene.rs  shape.rs  xia.rs
crates/axia-core/tests/: burge_face_loss_repro.rs  intersect_with_model.rs  primitive_auto_intersect.rs  repair_non_manifold.rs  six_rect_chain.rs  slice_volume_scene.rs  two_rects_merge_user_flow.rs
crates/axia-core/tests/fixtures/: burge.xia
crates/axia-foreign/: Cargo.toml
crates/axia-foreign/src/: conic_converter.rs  iges.rs  lib.rs  promote_curve.rs  promote_surface.rs  step.rs  step_lexer.rs  step_parser.rs  step_resolver.rs  sweep_converter.rs
crates/axia-foreign/tests/: cube_roundtrip.rs
crates/axia-foreign/tests/fixtures/: cube.stp
crates/axia-geo/: Cargo.toml
crates/axia-geo/benches/: BASELINE_2026-05-16.md  practicality_bench.rs
crates/axia-geo/src/: lib.rs  mesh.rs  mesh_export.rs  mesh_invariants.rs  mesh_migration.rs  mesh_owner_ids.rs  mesh_path_b.rs  p7_manifold.rs  path_b_family_verification.rs  plane.rs  storage.rs  tolerances.rs  topology_damage.rs
crates/axia-geo/src/boundary_kernel/: analytic_arrange.rs  bentley_ottmann.rs  geom2.rs  mod.rs  planar.rs  region.rs  robust_split.rs
crates/axia-geo/src/curves/: arc.rs  bezier.rs  bspline.rs  circle.rs  conic.rs  curvature.rs  distance.rs  fitting.rs  intersect.rs  knot.rs  line.rs  mod.rs  nurbs.rs  synthesize.rs  transform.rs
crates/axia-geo/src/entities/: edge.rs  face.rs  flags.rs  half_edge.rs  id.rs  mod.rs  shell.rs  vertex.rs
crates/axia-geo/src/operations/: annulus.rs  array_op.rs  boolean.rs  boolean_dispatch.rs  boolean_geo.rs  boolean_nurbs_dcel.rs  boundary.rs  boundary_input.rs  carve.rs  chamfer_brep.rs  cleave.rs  coplanar.rs  create_solid.rs  deform.rs  draft.rs  draw.rs  edit_2d.rs  erase_resynth.rs  face_rederive.rs  face_split.rs  fillet.rs  fillet_brep.rs  fillet_dispatch.rs  geometric_merge.rs  import_mesh.rs  loft.rs  mirror.rs  mod.rs  offset.rs  offset_surface_robust.rs  orient.rs  p7_canonical_resolver.rs  patch_surface.rs  planar_walk.rs  plane_snap.rs  polygon_geom.rs  primitives.rs  push_pull.rs  repair.rs  revolve.rs  (+7 more)
crates/axia-geo/src/predicates/: adapter.rs  filter.rs  hotspots.rs  mod.rs
crates/axia-geo/src/surfaces/: bezier_patch.rs  bspline_surface.rs  cone.rs  curvature.rs  cylinder.rs  fitting.rs  geodesic.rs  knot.rs  loft.rs  merge.rs  mod.rs  nurbs_surface.rs  plane.rs  sphere.rs  sweep.rs  torus.rs  transform.rs  trim.rs
crates/axia-geo/src/surfaces/ssi/: analytic.rs  boolean.rs  mod.rs  newton.rs  nurbs_wrapper.rs  robustness.rs  subdivide.rs  tolerance.rs  topology.rs  trim_boolean.rs  trim_classify.rs  trim_gen.rs  trim_geom.rs  trim_to_polyline.rs
crates/axia-geo/tests/: boolean_planar_probe.rs  boolean_scoping.rs  face_classification.rs  line_vs_rect_edge_parity.rs  phase3_curved_cut_sim.rs  phase3_gate_sim.rs  practicality_edge_cases.rs  sheet_boolean.rs  slice_volume.rs
crates/axia-ifc/: Cargo.toml
crates/axia-ifc/examples/: dump_cube.rs
crates/axia-ifc/src/: guid.rs  ifc_advancedbrep.rs  ifc_analyze.rs  ifc_common.rs  ifc_element_kind.rs  ifc_elements.rs  ifc_facetedbrep.rs  ifc_geometry.rs  ifc_model.rs  ifc_placement.rs  ifc_spatial.rs  lib.rs  step_value.rs  step_writer.rs
crates/axia-transaction/: Cargo.toml
crates/axia-wasm/: Cargo.toml
crates/axia-wasm/src/: lib.rs  step6_json.rs
crates/axia-wasm/tests/: export_baseline.txt  step6_additive_only.rs
docs/: KAYAC_engine_review_2026-05-08.md  PRACTICALITY_REPORT.md  STEP_IGES_EVALUATION.md  concept-refactor-review-2026-04-15.md  system-review-2026-04-15.md
docs/adr/: 001-geometry-semantic-layer-separation.md  002-xia-state-from-face-count.md  003-geometric-validity-principle.md  004-xia-level-stable-id.md  005-coplanar-merge-purely-geometric.md  006-face-merge-future-work.md  007-face-orientation-policy.md  008-face-operation-axioms.md  009-orphan-face-recovery.md  010-inference-resolution.md  011-tool-inertia.md  012-latency-budget.md  013-memory-budget.md  014-meta-principles-extension.md  015-stacked-inner-rect-topology.md  (+267 more)
samples/: test_import.dxf
scripts/: check-adr-catalog.mjs  ifc-external-validate.mjs  patch-wasm-package.mjs
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  test_dxf_parse.html  test_dxf_upload.html  test_skp.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
(+513 files in other folders)
