[workspace]
members = [
    "crates/axia-core",
    "crates/axia-geo",
    "crates/axia-wasm",
    "crates/axia-transaction",
    "crates/axia-foreign",
    "crates/axia-ifc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WYKO <withoz1111@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Math
glam = { version = "0.30", features = ["bytemuck", "serde"] }

# Data structures
rustc-hash = "2.1"
smallvec = { version = "1.13", features = ["serde"] }
bitflags = { version = "2.6", features = ["serde"] }

# Triangulation
earcutr = "0.5"

# CAD file formats
dxf = "0.6"
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytemuck = { version = "1.23", features = ["derive"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Internal crates
axia-core = { path = "crates/axia-core" }
axia-geo = { path = "crates/axia-geo" }
axia-transaction = { path = "crates/axia-transaction" }
axia-foreign = { path = "crates/axia-foreign" }
axia-ifc = { path = "crates/axia-ifc" }

[profile.release]
lto = true
opt-level = "s"        # WASM size optimization
strip = true
