[package]
name = "axia-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AXiA 3D WASM bridge — wasm-bindgen exports for Three.js viewport"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
axia-core = { workspace = true }
axia-geo = { workspace = true }
axia-transaction = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
# Surfaces a panic's message + source location to console.error before the wasm
# trap (otherwise a Rust panic shows only an opaque "RuntimeError: unreachable"
# and, because the trap leaks the wasm-bindgen borrow guard, every later call
# fails with "recursive use"). Diagnostic only — does not change runtime behaviour.
console_error_panic_hook = "0.1"
